# TinyLogger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cc
